# passify

./: CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/passify/: __init__.py  cli.py  crypto_engine.py  crypto_engine_test.py  passify_host.py  password_gen.py  test_message.json  vault.svf  vault_manager.py  vault_manager_test.py
tests/: __init__.py  test_passify.py
