[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "passify"
version = "0.1.0"
description = "A local-first, secure password manager built in Python that encrypts all user credentials using AES-GCM and stores them in a single encrypted vault file. SafeVault uses Argon2 for key derivation, ensures complete offline functionality, and is designed to replace browser-based password managers by prioritizing the CIA triad: Confidentiality, Integrity, and Availability."
readme = "README.rst"
authors = [
  {name = "Dylan Andrew Kress", email = "dylankress@gmail.com"}
]
maintainers = [
  {name = "Dylan Andrew Kress", email = "dylankress@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"
changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/blob/master/changelog.md"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

